--- a/geo-byte-frontend/src/app/locations/locations.component.html
+++ b/geo-byte-frontend/src/app/locations/locations.component.html
@@ -1,1 +1,252 @@
-<p>locations works!</p>
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section>
+
+    <div class="container">
+        <div class="text-center my-5 d-flex">
+            <h2>All Locations</h2>
+            <button class="btn btn-primary ml-auto hover-top-shadow" href="" type="button" data-toggle="modal"
+                data-target="#addLocationModal">Add a location</button>
+        </div>
+        <div class="row align-items-center justify-content-center">
+            <div class="col-12 text-center">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Coordinate X</th>
+                            <th scope="col">Coordinate Y</th>
+                            <th scope="col">Clearing Cost</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Abeokuta</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>$26</td>
+                            <td>
+                                <button title="Update Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#updateLocationModal"><img class=""
+                                        src="assets/img/pencil.svg" alt="" /></button>
+                                <button title="Remove Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#deleteLocationModal"><img class=""
+                                        src="assets/img/trash.svg" alt="" /></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Abeokuta</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>$26</td>
+                            <td>
+                                <button title="Update Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#updateLocationModal"><img class=""
+                                        src="assets/img/pencil.svg" alt="" /></button>
+                                <button title="Remove Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#deleteLocationModal"><img class=""
+                                        src="assets/img/trash.svg" alt="" /></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Abeokuta</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>$26</td>
+                            <td>
+                                <button title="Update Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#updateLocationModal"><img class=""
+                                        src="assets/img/pencil.svg" alt="" /></button>
+                                <button title="Remove Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#deleteLocationModal"><img class=""
+                                        src="assets/img/trash.svg" alt="" /></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>Abeokuta</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>$26</td>
+                            <td>
+                                <button title="Update Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#updateLocationModal"><img class=""
+                                        src="assets/img/pencil.svg" alt="" /></button>
+                                <button title="Remove Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#deleteLocationModal"><img class=""
+                                        src="assets/img/trash.svg" alt="" /></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>Abeokuta</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>$26</td>
+                            <td>
+                                <button title="Update Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#updateLocationModal"><img class=""
+                                        src="assets/img/pencil.svg" alt="" /></button>
+                                <button title="Remove Location" class="btn btn-success text-white py-1" type="button"
+                                    data-toggle="modal" data-target="#deleteLocationModal"><img class=""
+                                        src="assets/img/trash.svg" alt="" /></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
+
+
+<section class="py-7">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-lg-3">
+                <h4 class="text-primary font-weight-bold">GeoByte.</h4>
+                <p class="mb-2 text-muted">Where speed connects <br> with efficiency.</p>
+
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+            </div>
+            <div class="col-6 col-md-4 offset-md-4 col-lg-2 offset-lg-0">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <h6 class="footer-title">Features</h6>
+                <ul class="list-unstyled mb-0">
+                    <li class="mb-2 mb-lg-2"><a class="text-500 text-decoration-none"
+                            href="javascript:void(0)">Lightening Fast Algorithm</a></li>
+                    <li class="mb-2 mb-lg-2"><a class="text-500 text-decoration-none" href="javascript:void(0)">Maximum
+                            Savings on Cost</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="text-center border-top footer-text py-3">
+
+    <div class="container">Made with <a class="text-500 text-decoration-none" target="_blank"
+            href="https://themewagon.com/"> ThemeWagon </a> by <a target="_blank" class="text-500 text-decoration-none"
+            href="https://www.phainix.co"> Adekogbe Faith </a>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
+
+
+<!-- Add Modal -->
+<div class="modal fade" id="addLocationModal" tabindex="-1" role="dialog" aria-labelledby="addLocationModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addLocationModalLabel">Add a location</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body bg-light">
+                <form>
+                    <div class="mb-4">
+                        <input class="form-control" id="cardName" type="text" placeholder="Name" />
+                    </div>
+                    <div class="mb-4 d-flex row">
+                        <div class="col-6">
+                            <input class="form-control" id="cardEmail" type="email" placeholder="Coordinate X" />
+                        </div>
+                        <div class="col-6">
+                            <input class="form-control" id="cardEmail" type="email" placeholder="Coordinate X" />
+                        </div>
+                    </div>
+                    <div class="mb-4">
+                        <input class="form-control" id="cardPassword" type="number" placeholder="Clearing Cost" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Update Modal -->
+<div class="modal fade" id="updateLocationModal" tabindex="-1" role="dialog" aria-labelledby="updateLocationModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="updateLocationModalLabel">Update location</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body bg-light">
+                <form>
+                    <div class="mb-4">
+                        <input class="form-control" id="cardName" type="text" placeholder="Name" value="Abeokuta" />
+                    </div>
+                    <div class="mb-4 d-flex row">
+                        <div class="col-6">
+                            <input class="form-control" id="cardEmail" type="email" placeholder="Coordinate X"
+                                value="23" />
+                        </div>
+                        <div class="col-6">
+                            <input class="form-control" id="cardEmail" type="email" placeholder="Coordinate X"
+                                value="45" />
+                        </div>
+                    </div>
+                    <div class="mb-4">
+                        <input class="form-control" id="cardPassword" type="number" placeholder="Clearing Cost"
+                            value="99" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteLocationModal" tabindex="-1" role="dialog" aria-labelledby="deleteLocationModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteLocationModalLabel">Delete location</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body bg-light">
+                <p>You are about to delete Abeokuta, please note that this operation cannot be reversed</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
