--- a/geo-byte-frontend/src/app/route/route.component.html
+++ b/geo-byte-frontend/src/app/route/route.component.html
@@ -1,1 +1,230 @@
-<p>route works!</p>
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="bg-light">
+
+    <div class="container">
+        <div class="text-center my-5 d-flex">
+            <!-- <h2>Get Optimal Route</h2> -->
+        </div>
+        <div class="row align-items-center justify-content-center">
+            <div class="col-12">
+                <form>
+                    <div class="mb-4 d-flex row">
+                        <div class="col-4">
+                            <label for="">Origin</label>
+                            <select name="" id="" class="form-control">
+                                <option value="">Select Location</option>
+                                <option value="">Abeokuta</option>
+                                <option value="">Tokyo</option>
+                                <option value="">Lokoja</option>
+                                <option value="">Somolu</option>
+                            </select>
+                        </div>
+                        <div class="col-4">
+                            <label for="">Destination</label>
+                            <select name="" id="" class="form-control">
+                                <option value="">Select Location</option>
+                                <option value="">Abeokuta</option>
+                                <option value="">Tokyo</option>
+                                <option value="">Lokoja</option>
+                                <option value="">Somolu</option>
+                            </select>
+                        </div>
+                        <div class="col-4">
+                            <label for=""></label>
+                            <button class="btn btn-block btn-success text-white" type="submit">Get Optimal
+                                Route</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
+
+
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="py-4 pt-md-6 bg-light" id="pricing">
+
+    <div class="container">
+        <div class="text-center mb-5 text-justify">
+            <h1>Generated Routes.</h1>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="row align-items-center g-0">
+                    <div class="col-md-6 position-relative">
+                        <div class="card rounded-lg shadow-lg mb-5 mb-md-0 border-0 z-index-1 overflow-hidden">
+                            <div class="card-body px-4 px-sm-7 px-md-4 px-xl-7 py-6 py-md-5 py-lg-6">
+                                <div class="text-center mb-5"><span
+                                        class="badge bg-light font-weight-normal text-uppercase text-primary">Optimal
+                                        Route</span>
+                                </div>
+                                <div class="d-flex justify-content-center"><span class="h2 mb-0 mt-2">$</span><span
+                                        class="display-3 font-weight-normal">29</span><span
+                                        class="h2 align-self-end mb-1">/package</span></div>
+                                <p class="text-center text-muted mb-2 mb-md-4"></p>
+                                <ul class="list-unstyled">
+                                    <li class="mb-3"><span class="mr-2">
+                                            <svg class="bi bi-check-circle" width=".8em" height=".8em"
+                                                viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                                </path>
+                                                <path fill-rule="evenodd"
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                                </path>
+                                            </svg></span>Covers a distance of 55km</li>
+                                    <li class="mb-3"><span class="mr-2">
+                                            <svg class="bi bi-check-circle" width=".8em" height=".8em"
+                                                viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                                </path>
+                                                <path fill-rule="evenodd"
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                                </path>
+                                            </svg></span>2 Stops are made along this route</li>
+                                    <li class="mb-3"><span class="mr-2">
+                                            <svg class="bi bi-check-circle" width=".8em" height=".8em"
+                                                viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                                </path>
+                                                <path fill-rule="evenodd"
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                                </path>
+                                            </svg></span>Path</li>
+                                </ul>
+                                <div class="timeline">
+                                    <ul>
+                                        <li><span></span>
+                                            <div>
+                                                <div class="title">Abeokuta</div>
+                                                <div class="info">Package departs origin location</div>
+                                                <div class="type">Origin</div>
+                                            </div> <span class="number"><span>0km</span>
+                                                <span>$0</span></span>
+                                        </li>
+                                        <li>
+                                            <div><span></span>
+                                                <div class="title">Tokyo</div>
+                                                <div class="info">Package arrives and after clearance it departs
+                                                </div>
+                                                <div class="type">Stop</div>
+                                            </div> <span class="number"><span>9.4km</span>
+                                                <span>$9.4</span></span>
+                                        </li>
+                                        <li>
+                                            <div><span></span>
+                                                <div class="title">Korea</div>
+                                                <div class="info">Package arrives destination location</div>
+                                                <div class="type">Destination</div>
+                                            </div> <span class="number"><span>55km</span>
+                                                <span>$29</span></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-footer p-0 border-0">
+                            </div>
+                        </div>
+
+                        <!-- Badge -->
+                        <div class="route-badge bg-success text-uppercase">Recommended</div>
+                    </div>
+                    <div class="col-md-6 position-relative">
+                        <div class="card rounded-lg shadow-lg border-0 overflow-hidden">
+                            <div class="card-body px-4 px-sm-7 px-md-4 px-xl-7 py-6 py-md-5 py-lg-6">
+                                <div class="text-center mb-5"><span
+                                        class="badge bg-light font-weight-normal text-uppercase text-primary">Most
+                                        Expensive</span>
+                                </div>
+                                <div class="d-flex justify-content-center"><span class="h2 mb-0 mt-2">$</span><span
+                                        class="display-3 font-weight-normal">450</span><span
+                                        class="h2 align-self-end mb-1">/package</span></div>
+                                <p class="text-center text-muted mb-2 mb-md-4"></p>
+                                <ul class="list-unstyled">
+                                    <li class="mb-3"><span class="mr-2">
+                                            <svg class="bi bi-check-circle" width=".8em" height=".8em"
+                                                viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                                </path>
+                                                <path fill-rule="evenodd"
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                                </path>
+                                            </svg></span>Covers a distance of 165km</li>
+                                    <li class="mb-3"><span class="mr-2">
+                                            <svg class="bi bi-check-circle" width=".8em" height=".8em"
+                                                viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                                </path>
+                                                <path fill-rule="evenodd"
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                                </path>
+                                            </svg></span>4 Stops are made along this route</li>
+                                    <li class="mb-3"><span class="mr-2">
+                                            <svg class="bi bi-check-circle" width=".8em" height=".8em"
+                                                viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                                </path>
+                                                <path fill-rule="evenodd"
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                                </path>
+                                            </svg></span>Path</li>
+                                </ul>
+                                <div class="timeline">
+                                    <ul>
+                                        <li><span></span>
+                                            <div>
+                                                <div class="title">Abeokuta</div>
+                                                <div class="info">Package departs origin location</div>
+                                                <div class="type">Origin</div>
+                                            </div> <span class="number"><span>0km</span>
+                                                <span>$0</span></span>
+                                        </li>
+                                        <li>
+                                            <div><span></span>
+                                                <div class="title">Tokyo</div>
+                                                <div class="info">Package arrives and after clearance it departs
+                                                </div>
+                                                <div class="type">Stop</div>
+                                            </div> <span class="number"><span>9.4km</span>
+                                                <span>$9.4</span></span>
+                                        </li>
+                                        <li>
+                                            <div><span></span>
+                                                <div class="title">Korea</div>
+                                                <div class="info">Package arrives destination location</div>
+                                                <div class="type">Destination</div>
+                                            </div> <span class="number"><span>55km</span>
+                                                <span>$29</span></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-footer p-0 border-0">
+
+                            </div>
+                        </div>
+
+                        <!-- Badge -->
+                        <div class="route-badge bg-danger text-uppercase">Worst</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
