--- a/geo-byte-frontend/src/app/home/home.component.html
+++ b/geo-byte-frontend/src/app/home/home.component.html
@@ -1,1 +1,106 @@
-<p>home works!</p>
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="pt-4 pt-md-5">
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-5 col-lg-6 order-md-1"><img class="img-fluid mb-5 mb-md-0"
+                    src="assets/img/destinations.svg" alt="" /></div>
+            <div class="col-md-7 col-lg-6">
+                <h1 class="display-6 text-center text-md-left">Welcome to <span class="text-primary">GeoByte</span>.
+                    <br />Lets create the future of logistics.
+                </h1>
+                <p class="lead text-center text-md-left text-muted mb-3">Find the best routes to deliver
+                    packages in the fastest time possible, stand out in the crowd, work with<br
+                        class="d-none d-xl-block d-xxl-none" /> GeoByte.</p>
+                <div class="text-center text-md-left pt-4">
+                    <a class="btn btn-lg btn-primary hover-top-shadow mr-3" [routerLink]="['/sign-up']">Sign Up
+                        <svg class="bi bi-arrow-right-short" width="1.2em" height="1.2em" viewBox="0 0 16 16"
+                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z">
+                            </path>
+                            <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5H11a.5.5 0 0 1 0 1H4.5A.5.5 0 0 1 4 8z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="btn btn-lg btn-light text-primary shadow-lg hover-top-shadow" [routerLink]="['/sign-in']">Sign
+                        In</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
+
+
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="py-5 py-md-7 border-bottom" id="feature">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-4 mb-4"><img class="mb-3" src="assets/img/gallery/speed.png" alt="" />
+                <h5>Get off to a quick start</h5>
+                <p class="text-muted mb-0">This is the Best starting point for your deliveries. Choose the
+                    origin and destination locations and watch it all come to life.</p>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4"><img class="mb-3" src="assets/img/gallery/changelog.png" alt="" />
+                <h5>Multiple routes</h5>
+                <p class="text-muted mb-0">Access to view multiple delivery routes with an in depth comparison
+                    of their cost and time taken.</p>
+            </div>
+            <div class="col-md-6 col-lg-4"><img class="mb-3" src="assets/img/gallery/bolt.png" alt="" />
+                <h5>Lightening speed</h5>
+                <p class="text-muted mb-0">Analyse multiple locations to find the best route at the speed of
+                    light to get you ahead of your peers.</p>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
+
+
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="bg-light py-5 py-md-8" id="about">
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-7 col-lg-6 pr-lg-4 pr-xl-7">
+                <h2>We are a team of ardent<br /><span class="text-primary">
+                        professionals. </span></h2>
+                <p class="text-muted mb-4"> We have powered thousands of deliveries with countless logistics
+                    companies in order to helpe them optimize their processes, you can be next.</p>
+                <div class="d-flex align-items-start"><img src="assets/img/gallery/layer.png" alt="" width="30"
+                        height="30" />
+                    <div class="ml-3">
+                        <h5>Deliver fast, accross the best routes</h5>
+                        <p class="text-muted mb-4">We believe in excellence & you will find the reflection of
+                            our belief in our services and support.</p>
+                    </div>
+                </div>
+                <div class="d-flex align-items-start"><img src="assets/img/gallery/folder_plus.png" alt="" width="30"
+                        height="30" />
+                    <div class="ml-3 mb-3">
+                        <h5>Start your deliveries with us</h5>
+                        <p class="text-muted mb-6 mb-md-0">Our work doesn't end with optimising delivery routes. We
+                            continue to thrive by helping our clients.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 col-lg-6"><img class="img-fluid img-skew" src="assets/img/navigator.svg" alt="" />
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
