--- a/geo-byte-frontend/src/app/sign-in/sign-in.component.html
+++ b/geo-byte-frontend/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,33 @@
-<p>sign-in works!</p>
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="bg-light py-5 py-md-8" id="about">
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md px-xl-7 p-xxl-8 order-md-1 mb-4 mb-md-0 pl-md-4"><img class="img-fluid img-skew"
+                    src="assets/img/otw.svg" alt="" /></div>
+            <div class="col-lg-auto col-md-5">
+                <div class="card hover-top-shadow hover-top-shadow-lg border-0 card-form">
+                    <img class="card-img-top card-img-curve" src="assets/img/map.svg" alt="" />
+                    <div class="card-body p-4 pt-5">
+                        <form>
+                            <div class="mb-4">
+                                <input class="form-control" id="cardEmail" type="email" placeholder="Email" />
+                            </div>
+                            <div class="mb-4">
+                                <input class="form-control" id="cardPassword" type="password" placeholder="Password" />
+                            </div>
+                            <button class="btn btn-block btn-success text-white" type="submit">Sign In</button>
+                            <p class="text-center mt-3">Don't have an account? <a class="btn btn-link"
+                                [routerLink]="['/sign-up']">Sign Up</a></p>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
