--- a/geo-byte-frontend/src/app/sign-up/sign-up.component.html
+++ b/geo-byte-frontend/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,92 @@
-<p>sign-up works!</p>
+<!-- ============================================-->
+<!-- <section> begin ============================-->
+<section class="bg-light py-5 py-md-8" id="about">
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md px-xl-7 p-xxl-8 order-md-1 mb-4 mb-md-0 pl-md-4">
+                <h2>Start your deliveries <br /><span class="text-success mt-2 d-block">Why choose us? </span></h2>
+                <p class="text-muted">100+ logistics companies use our application.</p>
+                <div class="row">
+                    <div class="col-md-auto pr-xl-6">
+                        <div class="d-flex"><span class="mr-2">
+                                <svg class="bi bi-check-circle" width=".8em" height=".8em" viewBox="0 0 16 16"
+                                    fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                    </path>
+                                    <path fill-rule="evenodd"
+                                        d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                    </path>
+                                </svg></span>
+                            <p class="text-success">Lightening Fast Algorithm</p>
+                        </div>
+                        <div class="d-flex"><span class="mr-2">
+                                <svg class="bi bi-check-circle" width=".8em" height=".8em" viewBox="0 0 16 16"
+                                    fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                    </path>
+                                    <path fill-rule="evenodd"
+                                        d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                    </path>
+                                </svg></span>
+                            <p class="text-success">Maximum Savings on Cost</p>
+                        </div>
+                    </div>
+                    <div class="col-md-auto">
+                        <div class="d-flex"><span class="mr-2">
+                                <svg class="bi bi-check-circle" width=".8em" height=".8em" viewBox="0 0 16 16"
+                                    fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                    </path>
+                                    <path fill-rule="evenodd"
+                                        d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                    </path>
+                                </svg></span>
+                            <p class="text-success">Tech support</p>
+                        </div>
+                        <div class="d-flex"><span class="mr-2">
+                                <svg class="bi bi-check-circle" width=".8em" height=".8em" viewBox="0 0 16 16"
+                                    fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
+                                    </path>
+                                    <path fill-rule="evenodd"
+                                        d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
+                                    </path>
+                                </svg></span>
+                            <p class="text-success">Lifetime updates</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-auto col-md-5">
+                <div class="card hover-top-shadow hover-top-shadow-lg border-0 card-form">
+                    <img class="card-img-top card-img-curve" src="assets/img/map.svg" alt="" />
+                    <div class="card-body p-4 pt-5">
+                        <form>
+                            <div class="mb-4">
+                                <input class="form-control" id="cardName" type="text" placeholder="Name" />
+                            </div>
+                            <div class="mb-4">
+                                <input class="form-control" id="cardEmail" type="email" placeholder="Email" />
+                            </div>
+                            <div class="mb-4">
+                                <input class="form-control" id="cardPassword" type="password" placeholder="Password" />
+                            </div>
+                            <button class="btn btn-block btn-success text-white" type="submit">Sign Up</button>
+                            <p class="text-center mt-3">Have an account? <a class="btn btn-link"
+                                [routerLink]="['/sign-in']">Sign In</a></p>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of .container-->
+
+</section>
+<!-- <section> close ============================-->
+<!-- ============================================-->
