--- a/geo-byte-frontend/src/assets/css/theme.css
+++ b/geo-byte-frontend/src/assets/css/theme.css
@@ -14081,3 +14081,34 @@ a.text-500:hover {
 .timeline span.number span:last-child {
   top: 100%;
 }
+.loading:before {
+  position: fixed;
+  content: "";
+  width: 100vw;
+  height: 100vh;
+  z-index: 1050;
+}
+.loading:after {
+  content: "";
+  position: fixed;
+  width: 8rem;
+  height: 8rem;
+  border: 4px solid white;
+  border-radius: 50%;
+  left: calc(50% - 1rem);
+  top: calc(50% - 1rem);
+  border-top: 3px solid transparent;
+  animation: spin 1.4s cubic-bezier(0.39, 0.58, 0.57, 1) infinite;
+  z-index: 1051;
+}
+.loading:before {
+  background: #f96232fa;
+  background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(13, 110, 253, 0.6));
+  background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(13, 110, 253, 0.6));
+  background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(13, 110, 253, 0.6));
+  background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(13, 110, 253, 0.6));
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
