--- a/geo-byte-frontend/src/app/app.component.html
+++ b/geo-byte-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- ===============================================-->
 <!--    Main Content-->
 <!-- ===============================================-->
-<main class="main">
+<main class="main" [ngClass]="{'loading': getLoading()}">
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 pl-0">
         <div class="container"><a class="navbar-brand text-primary font-weight-bold" [routerLink]="['/']"> GeoByte.
             </a>
@@ -10,10 +10,19 @@
                     class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                </ul><a class="btn btn-primary ml-auto hover-top-shadow" [routerLink]="['/sign-in']">Sign In / Sign Up</a>
+                </ul><a class="btn btn-primary ml-auto hover-top-shadow" [routerLink]="['/sign-in']">Sign In / Sign
+                    Up</a>
             </div>
         </div>
     </nav>
+
+    <section class="">
+        <div class="container">
+            <div class="alert alert-{{ getAlert()?.type }}" role="alert">
+                {{ getAlert()?.message }}
+            </div>
+        </div>
+    </section>
 
     <router-outlet></router-outlet>
 
