Sign In API Integration

--- a/geo-byte-frontend/src/app/app.component.html
+++ b/geo-byte-frontend/src/app/app.component.html
@@ -10,8 +10,14 @@
                     class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                </ul><a class="btn btn-primary ml-auto hover-top-shadow" [routerLink]="['/sign-in']">Sign In / Sign
+                    <li *ngIf="getAuthenticated()" class="nav-item text-muted">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/locations']">View Locations</a>
+                    </li>
+                    <li *ngIf="getAuthenticated()" class="nav-item"><a class="nav-link" [routerLink]="['/route']">Get Optimal Route</a></li>
+                </ul>
+                <a *ngIf="!getAuthenticated()" class="btn btn-primary ml-auto hover-top-shadow" [routerLink]="['/sign-in']">Sign In / Sign
                     Up</a>
+                <a *ngIf="getAuthenticated()" class="btn btn-primary ml-auto hover-top-shadow">Hi, {{ getUser() }}</a>
             </div>
         </div>
     </nav>
